core_directory/tests/fixtures/invalid_no_sig/provider_has_patches.core
CAPI=2:
name: vendor:library:core:1.0.0
description: "A core file with patches."
provider:
  name: github
  user: myuser
  repo: myrepo
  version: "0123456789abcdef0123456789abcdef01234567"
  patches: []